--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <activity android:name=".ChooserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +26,13 @@
         <activity
             android:name=".auth.AuthUiActivity"
             android:label="@string/name_auth_ui" />
-
         <activity
             android:name=".auth.SignedInActivity"
             android:label="@string/name_auth_ui" />
+        <activity
+            android:name=".auth.SplashScreen"
+            android:label="@string/title_activity_splash_screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
