--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -23,12 +23,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile "org.robolectric:robolectric:3.1-rc1"
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.11.0'
-    compile "com.android.support:design:23.3.0"
+    compile "com.android.support:design:23.4.0"
 
-    compile "com.google.firebase:firebase-auth:${project.ext.firebase_version}"
-    compile "com.google.android.gms:play-services-auth:${project.ext.firebase_version}"
+    compile "com.google.firebase:firebase-auth:9.0.2"
+    compile "com.google.android.gms:play-services-auth:9.0.2"
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
 }
 
 checkstyle {
@@ -48,4 +50,4 @@ javadoc.exclude([
         'com/firebase/ui/auth/ui/ExtraConstants',
         'com/firebase/ui/auth/ui/email/field_validators/**',
         'com/firebase/ui/auth/util/**',
-        ])
+])
